# meson_google_benchmark

./: meson.build  mwe.cpp
subprojects/: google_benchmark.wrap
